# gyro-crawler

./: CMakeLists.txt  LICENSE  README.md  conanfile.py  embed-all.sh
resources/: stars-vertex-shader.glsl
src/: CMakeLists.txt  main.cpp  shader-source.hpp  stars.cpp  stars.hpp
src/interface/: CMakeLists.txt  error.cpp  error.hpp  event-handler.cpp  event-handler.hpp  glfw-owner.cpp  glfw-owner.hpp  graphics-include.hpp  input.cpp  input.hpp  interface.hpp  program.cpp  program.hpp  renderer.cpp  renderer.hpp  shader.cpp  shader.hpp  sprite.hpp  types.hpp  uniform.cpp  uniform.hpp  vertex-array.cpp  vertex-array.hpp  vertex-buffer.cpp  vertex-buffer.hpp  window.cpp  window.hpp
src/interface/resources/: CMakeLists.txt
